--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,4 @@ UnityVFX/Logs/shadercompiler-UnityShaderCompiler.exe5.log
 UnityVFX/Logs/shadercompiler-UnityShaderCompiler.exe6.log
 UnityVFX/Logs/shadercompiler-UnityShaderCompiler.exe7.log
 UnityVFX/Logs/shadercompiler-UnityShaderCompiler.exe8.log
+/Refs
