--- a/UnityVFX/Packages/manifest.json
+++ b/UnityVFX/Packages/manifest.json
@@ -9,6 +9,7 @@
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.4.4",
     "com.unity.render-pipelines.high-definition": "14.0.4",
+    "com.unity.render-pipelines.universal": "14.0.4",
     "com.unity.test-framework": "1.1.30",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.4.8",
